--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
         <section class="introduction">
             <h1>Bienvenue chez Spirit of Excellence (CF-SoE)</h1>
             <p>Notre mission : Transformer les pratiques managériales pour un avenir plus inclusif et performant.</p>
+            <img src="image management.jpg" alt="Management Solutions" class="image"> <!-- Ajout de l'image "Management" ici -->
         </section>
     </main>
 
     <footer>
         <p>&copy; 2024 Spirit of Excellence (CF-SoE by NEOMA)</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
