--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -24,11 +24,13 @@
         <section class="about">
             <h2>Qui sommes-nous ?</h2>
             <p>Spirit of Excellence (CF-SoE) est un cabinet de conseil fictif fondé par des élèves en CESEM en management et diversité, et porté par la vision innovante de NEOMA Business School.</p>
+            <img src="Image entreprise.jpg" alt="Entreprise Collaboration" class="image"> <!-- Ajout de l'image "Entreprise" ici -->
         </section>
     </main>
 
     <footer>
         <p>&copy; 2024 Spirit of Excellence (CF-SoE by NEOMA)</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
