--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spirit of Excellence (CF-SoE)</title>
+    <!-- Lien vers le fichier CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,7 +25,7 @@
         <section class="introduction">
             <h1>Bienvenue chez Spirit of Excellence (CF-SoE)</h1>
             <p>Notre mission : Transformer les pratiques managériales pour un avenir plus inclusif et performant.</p>
-            <img src="image management.jpg" alt="Management Solutions" class="image"> <!-- Ajout de l'image "Management" ici -->
+            <img src="image management.jpg" alt="Management Solutions" class="image"> <!-- Ajout de l'image -->
         </section>
     </main>
 
