--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Qui sommes-nous ? - Spirit of Excellence (CF-SoE)</title>
+    <!-- Lien vers le fichier CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,7 +25,7 @@
         <section class="about">
             <h2>Qui sommes-nous ?</h2>
             <p>Spirit of Excellence (CF-SoE) est un cabinet de conseil fictif fondé par des élèves en CESEM en management et diversité, et porté par la vision innovante de NEOMA Business School.</p>
-            <img src="Image entreprise.jpg" alt="Entreprise Collaboration" class="image"> <!-- Ajout de l'image "Entreprise" ici -->
+            <img src="Image entreprise.jpg" alt="Entreprise Collaboration" class="image"> <!-- Ajout de l'image -->
         </section>
     </main>
 
