--- a/services.html
+++ b/services.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nos services - Spirit of Excellence (CF-SoE)</title>
+    <!-- Lien vers le fichier CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -36,5 +37,6 @@
     <footer>
         <p>&copy; 2024 Spirit of Excellence (CF-SoE by NEOMA)</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
