--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="qui-sommes-nous.html">Qui sommes-nous ?</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Nos services</a></li>
                 <li><a href="pourquoi-nous-choisir.html">Pourquoi nous choisir ?</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -25,7 +25,7 @@
         <section class="introduction">
             <h1>Bienvenue chez Spirit of Excellence (CF-SoE)</h1>
             <p>Notre mission : Transformer les pratiques managériales pour un avenir plus inclusif et performant.</p>
-            <img src="image management.jpg" alt="Management Solutions" class="image"> <!-- Ajout de l'image -->
+            <img src="image_brainstorming.jpg" alt="Brainstorming" class="image">
         </section>
     </main>
 
@@ -35,3 +35,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
