--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="qui-sommes-nous.html">Qui sommes-nous ?</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Nos services</a></li>
                 <li><a href="pourquoi-nous-choisir.html">Pourquoi nous choisir ?</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -25,7 +25,7 @@
         <section class="about">
             <h2>Qui sommes-nous ?</h2>
             <p>Spirit of Excellence (CF-SoE) est un cabinet de conseil fictif fondé par des élèves en CESEM en management et diversité, et porté par la vision innovante de NEOMA Business School.</p>
-            <img src="Image entreprise.jpg" alt="Entreprise Collaboration" class="image"> <!-- Ajout de l'image -->
+            <img src="image_equipe_soudee.jpg" alt="Équipe soudée" class="image">
         </section>
     </main>
 
@@ -35,3 +35,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
