--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="qui-sommes-nous.html">Qui sommes-nous ?</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Nos services</a></li>
                 <li><a href="pourquoi-nous-choisir.html">Pourquoi nous choisir ?</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -31,6 +31,7 @@
                 <li>Accompagnement au changement</li>
                 <li>Mesure et suivi de la performance</li>
             </ul>
+            <img src="image_management.jpg" alt="Management" class="image">
         </section>
     </main>
 
@@ -40,3 +41,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
