--- a/pourquoi-nous-choisir.html
+++ b/pourquoi-nous-choisir.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="qui-sommes-nous.html">Qui sommes-nous ?</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Nos services</a></li>
                 <li><a href="pourquoi-nous-choisir.html">Pourquoi nous choisir ?</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -30,6 +30,7 @@
                 <li>Impact mesurable</li>
                 <li>Engagement pour un futur inclusif</li>
             </ul>
+            <img src="image_poignee_de_main.jpg" alt="Poignée de main" class="image">
         </section>
     </main>
 
