--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="qui-sommes-nous.html">Qui sommes-nous ?</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Nos services</a></li>
                 <li><a href="pourquoi-nous-choisir.html">Pourquoi nous choisir ?</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -27,6 +27,7 @@
             <p>Email : <a href="mailto:pacome.roche.24@neoma-bs.com">pacome.roche.24@neoma-bs.com</a></p>
             <p>Adresse : 59 Rue Pierre Taittinger, Reims, 51100</p>
             <p>Suivez-nous sur Facebook : @Pacôme Roche, @Hugo Moutinho, @Renault Augustin</p>
+            <img src="image_tableau.jpg" alt="Tableau de travail" class="image">
         </section>
     </main>
 
