--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <main>
         <section class="introduction">
             <h1>Bienvenue chez Spirit of Excellence (CF-SoE)</h1>
-            <p>Notre mission : Transformer les pratiques managériales pour un avenir plus inclusif et performant.</p>
+            <p>Notre Mission : Transformer les pratiques managériales pour un avenir plus inclusif et performant.</p>
+            <p>Chez Spirit of Excellence (CF-SoE), nous croyons fermement que la diversité et l'inclusion sont des leviers puissants pour améliorer la performance et l'innovation au sein des entreprises. Nous nous consacrons à accompagner les organisations dans la mise en place de stratégies de management efficaces, inclusives et durables qui favorisent la cohésion d'équipe, la performance collective et la réussite de chacun.</p>
             <img src="image_brainstorming.jpg" alt="Brainstorming" class="image">
         </section>
     </main>
@@ -35,4 +36,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
