--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -24,7 +24,27 @@
     <main>
         <section class="about">
             <h2>Qui sommes-nous ?</h2>
-            <p>Spirit of Excellence (CF-SoE) est un cabinet de conseil fictif fondé par des élèves en CESEM en management et diversité, et porté par la vision innovante de NEOMA Business School.</p>
+            <p>Spirit of Excellence (CF-SoE) est un cabinet de conseil fictif fondé par des élèves en CESEM en management et diversité, et porté par la vision innovante de NEOMA Business School. Notre équipe est composée d’étudiants passionnés par les enjeux liés à la diversité et à l'inclusion.</p>
+            <h3>Nos valeurs :</h3>
+            <h4>Excellence :</h4>
+            <ul>
+                <li>Se fixer des objectifs et répondre à des besoins</li>
+                <li>Respecter les échéances d’un travail</li>
+                <li>Savoir rebondir sur des problèmes rencontrés</li>
+                <li>Curiosité et écoute</li>
+            </ul>
+            <h4>Esprit d’équipe :</h4>
+            <ul>
+                <li>Partage des données, infos</li>
+                <li>Le respect des autres (n’importe qui dans n’importe quelle situation)</li>
+                <li>Avoir une proximité entre chacun</li>
+            </ul>
+            <h4>Intégrité :</h4>
+            <ul>
+                <li>Non divulgation des données de l'entreprise, secret professionnel</li>
+                <li>Transparence au niveau des conflits internes</li>
+                <li>Respect du règlement</li>
+            </ul>
             <img src="image_equipe_soudee.jpg" alt="Équipe soudée" class="image">
         </section>
     </main>
