--- a/services.html
+++ b/services.html
@@ -23,13 +23,13 @@
 
     <main>
         <section class="services">
-            <h2>Nos services</h2>
+            <h2>Nos services clés :</h2>
             <ul>
-                <li>Audit de la diversité et de l'inclusion</li>
-                <li>Stratégies de management inclusif</li>
-                <li>Programmes de formation</li>
-                <li>Accompagnement au changement</li>
-                <li>Mesure et suivi de la performance</li>
+                <li>Audit de la diversité et de l'inclusion : Diagnostic de l’environnement de travail, analyse des pratiques managériales, et identification des axes d’amélioration en matière de diversité.</li>
+                <li>Stratégies de management inclusif : Élaboration de politiques et de techniques de management permettant d’intégrer et valoriser la diversité des profils et des perspectives au sein des équipes.</li>
+                <li>Programmes de formation : Ateliers et formations sur la gestion de la diversité, l'inclusion, et le leadership inclusif pour développer les compétences managériales et renforcer la cohésion d’équipe.</li>
+                <li>Accompagnement au changement : Mise en place de plans d’actions personnalisés pour accompagner les entreprises dans leur transformation organisationnelle en faveur de l’inclusion.</li>
+                <li>Mesure et suivi de la performance : Suivi des indicateurs de diversité et de cohésion, et accompagnement dans la gestion des résultats pour une amélioration continue.</li>
             </ul>
             <img src="image_management.jpg" alt="Management" class="image">
         </section>
