--- a/pourquoi-nous-choisir.html
+++ b/pourquoi-nous-choisir.html
@@ -24,12 +24,12 @@
     <main>
         <section class="why-choose-us">
             <h2>Pourquoi nous choisir ?</h2>
-            <ul>
-                <li>Expertise académique et pragmatisme</li>
-                <li>Solutions personnalisées</li>
-                <li>Impact mesurable</li>
-                <li>Engagement pour un futur inclusif</li>
-            </ul>
+            <ol>
+                <li><b>Expertise académique et pragmatisme :</b> Notre cabinet bénéficie de la synergie entre la recherche de pointe de NEOMA Business School et une approche pragmatique basée sur des études de cas réels.</li>
+                <li><b>Solutions personnalisées :</b> Nous adaptons nos méthodes et recommandations aux spécificités de chaque entreprise, quelle que soit sa taille ou son secteur d'activité.</li>
+                <li><b>Impact mesurable :</b> Grâce à nos outils d’évaluation et de suivi, nous vous aidons à mesurer concrètement les résultats de vos initiatives en matière de diversité et de management.</li>
+                <li><b>Engagement pour un futur inclusif :</b> Nous croyons en un avenir où la diversité est une force, et nous nous engageons à construire ce futur avec nos clients.</li>
+            </ol>
             <img src="image_poignee_de_main.jpg" alt="Poignée de main" class="image">
         </section>
     </main>
@@ -40,4 +40,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
